# hayai

./: CMakeLists.txt  manifest.xml
sample/: CMakeLists.txt  WomanBenchmark.cpp  WomanBenchmarkWithFixture.cpp
src/: hayai-posixmain.cpp
